[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/noto_sans_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://BattleSystem/PauseScene.gd" type="Script" id=2]
[ext_resource path="res://BattleSystem/ConfirmEndingScene.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.141176, 0.85098, 0.282353, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.164706, 0.643137, 0.254902, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.164706, 0.643137, 0.254902, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.952941, 0.0901961, 0.0901961, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.709804, 0.14902, 0.14902, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.709804, 0.14902, 0.14902, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="PauseScene" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 2 )

[node name="ResumeButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -161.0
margin_right = 300.0
margin_bottom = -11.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 11 )
text = "繼續戰鬥"

[node name="EndinglButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -446.0
margin_right = 300.0
margin_bottom = -296.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 12 )
text = "離開戰鬥"

[node name="ConfirmEndingScene" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="EndinglButton" to="." method="_on_EndinglButton_pressed"]
